--- a/exam_app/templates/base.html
+++ b/exam_app/templates/base.html
@@ -11,8 +11,7 @@
     <body>
         <div class="container">
             <div class="page-header">
-            <h1>Django CRUD Scaffold</h1>
-            <p>Default template for generated CRUD scaffold.  You should create your own base.html in your template root, with a block named "content".</p>
+            <h1>BI dev.</h1>
             <ul>            
                 <li><a href="{% url 'exam_app:question_one' %}">Question 1 part 1</a></li>
                 <li><a href="{% url 'exam_app:question_one_gma' %}">Question 1 part 2 (GMA)</a></li>
